# pincer

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/arctos_config/share/arctos_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arctos_config/share/arctos_config/cmake/: arctos_configConfig.cmake
install/arctos_moveit/share/arctos_moveit/: package.bash  package.zsh
install/arctos_urdf_description/share/arctos_urdf_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arctos_urdf_description/share/arctos_urdf_description/cmake/: arctos_urdf_descriptionConfig.cmake
log/: latest_build
moveit/: moveit2.repos
pincer/: README.md
pincer/src/arctos_config/: CMakeLists.txt  package.xml
pincer/src/arctos_config/launch/: arctos_urdf_moveit_sensor_manager.launch.py  move_group.launch.py  ompl_planning_pipeline.launch.py  planning_pipeline.launch.py  sensor_manager.launch.py  trajectory_execution.launch.py  warehouse.launch.py
pincer/src/arctos_moveit/: CMakeLists.txt  package.xml
pincer/src/arctos_moveit/src/: move_group_interface_coor_1.cpp  moveit_convert.cpp
pincer/src/arctos_urdf_description/: CMakeLists.txt
src/arctos_config/launch/: default_warehouse_db.launch.py  demo.launch.py  moveit_rviz.launch.py  planning_context.launch.py  warehouse.launch.py  warehouse_settings.launch.py
src/arctos_moveit/: CMakeLists.txt
