<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arctos_moveit</name>
  <version>0.0.0</version>
  <description>The arctos_moveit package</description>
  <maintainer email="pervigilent@gmail.com">stewart</maintainer>
  <!--
   One license tag required, multiple allowed, one license per tag 
  -->
  <!-- Commonly used license strings: -->
  <!--
     BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 
  -->  
  <license>TODO: License declaration</license>
  <!--
   <url type="website">http://wiki.ros.org/carmen_move</url> 
  -->
  <!--
   <author email="jane.doe@example.com">Jane Doe</author> 
  -->
  <!--
   The *_depend tags are used to specify dependencies 
  -->
  <!--
   Dependencies can be catkin packages or system dependencies 
  -->
  <!-- Examples: -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!--
   Use test_depend for packages you need only for testing: 
  -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <build_depend>message_generation</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <!--
  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  //-->
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>  
  <!--
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>moveit_core</build_depend>

    <run_depend>message_generation</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>moveit_core</run_depend>
    <run_depend>moveit_ros_planning_interface</run_depend>
    <run_depend>interactive_markers</run_depend>
  -->
  <!-- The export tag contains other, unspecified, tags -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
